Temporary update to trigger GitHub Pages

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
                 </ul>
             </div>
         </section>
-
+        
+        <!-- temporary change -->
         <!-- <section id="skills" class="skills">
             <div class="container">
                 <h2>Skills</h2>
